# twip

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build  docker-compose.yaml  docker_run.sh  setup.bash  vimrc
config/dockerfiles/agent/: Dockerfile  disable_fastdds_shm.xml  entrypoint.sh
config/dockerfiles/ros/: entrypoint.sh
config/dockerfiles/ros2/: Dockerfile  entrypoint.sh
containers/: Dockerfile.ros.talker
dockerfiles/agent/: Dockerfile  entrypoint.sh
include/: onnx.hpp
logs/: log.csv
models/: model.onnx  twip.pth.onnx  twip_1.3.0_aug.onnx  twip_1.3.1.onnx
ros_ws/model_logs/: 1
ros_ws/src/controller/: CMakeLists.txt  config.yaml  package.xml
ros_ws/src/controller/include/: OnnxHandler.hpp  controller.cpp  controller_node.hpp  memory_manager.hpp  onnx_controller.cpp  onnx_handler.hpp  serial.hpp
ros_ws/src/controller/onnx/: Twip.pth.onnx  twip_1.1.0_hori.onnx  twip_1.2.0_aug.onnx  twip_quick_try.onnx
ros_ws/src/controller/src/: controller.cpp  controller_node.cpp  onnx__handler.cpp  onnx_handler.cpp  serial.cpp
ros_ws/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ros_ws/src/my_cpp_pkg/src/: init_node.cpp
ros_ws/src/publisher/: CMakeLists.txt  package.xml
ros_ws/src/publisher/src/: .subscriber.cpp.swp  publisher.cpp  subscriber.cpp
src/: main  main.cpp  model.cpp  onnx.cpp  pid.cpp
